--- a/frontend/src/pages/CreateProject/CreateProject.css
+++ b/frontend/src/pages/CreateProject/CreateProject.css
@@ -22,7 +22,7 @@
 
 .card h2,
 p {
-  margin: 0.5rem 0.5rem;
+  margin: 0.5rem 0rem;
   height: max-content;
 }
 
@@ -57,6 +57,7 @@ p {
   font-size: 1.2rem;
   font-weight: 400;
   cursor: pointer;
+  margin-right: 0.3rem;
   margin-top: auto;
   margin-bottom: auto;
   place-items: center;
@@ -94,6 +95,15 @@ p {
 .project-name input:focus {
   outline: none;
   box-shadow: 0 0 0 2px #f76769, 0 0 0 2px #f76769;
+}
+
+.error {
+  color: #f76769;
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
+  font-weight: semibold;
+  text-align: left;
+  font-style: italic;
 }
 
 .create-project-btn {
