--- a/frontend/src/components/atoms/EditorButton/EditorButton.css
+++ b/frontend/src/components/atoms/EditorButton/EditorButton.css
@@ -11,7 +11,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  padding: 0.6em 1em;
+  padding: 0.6em;
   font-size: 16px;
   text-align: start;
   font-weight: 400;
@@ -27,4 +27,12 @@
 button:focus,
 button:focus-visible {
   outline: 0px;
+}
+
+.editor-button span {
+  display: inline-block;
+  width: calc(100% - 30px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
