--- a/frontend/src/components/molecules/Tree/TreeNode.css
+++ b/frontend/src/components/molecules/Tree/TreeNode.css
@@ -76,3 +76,11 @@
   width: 100%;
   box-sizing: border-box;
 }
+
+.active-file-highlight {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.file-folder-focus {
+  border: 1px solid white;
+}
