--- a/frontend/src/components/molecules/Tree/TreeNode.css
+++ b/frontend/src/components/molecules/Tree/TreeNode.css
@@ -98,3 +98,8 @@
   background-color: rgba(255, 255, 255, 0.3);
   color: white;
 }
+
+.file-collision {
+  background-color: rgba(255, 0, 0, 0.2);
+  border: 1px solid red;
+}
