--- a/frontend/src/components/molecules/Tree/TreeNode.css
+++ b/frontend/src/components/molecules/Tree/TreeNode.css
@@ -103,3 +103,7 @@
   background-color: rgba(255, 0, 0, 0.2);
   border: 1px solid red;
 }
+.file-collision:hover {
+  background-color: rgba(255, 0, 0, 0.2);
+  border: 1px solid red;
+}
