--- a/frontend/src/components/molecules/Tree/TreeNode.css
+++ b/frontend/src/components/molecules/Tree/TreeNode.css
@@ -27,16 +27,28 @@
   font-size: large;
 }
 
-.tree-toggle > span {
-  flex-grow: 1;
+.folder-icon {
   text-align: left;
+  padding: 0 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+
+.folder-name {
+  flex: 1; /* Take remaining space after icon */
+  min-width: 0; /* Required so flex + ellipsis works */
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: left;
+  padding: 0 5px;
 }
 
 .tree-toggle:hover {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 123, 255, 0.2);
+  color: white;
 }
 
 .tree-icon {
@@ -51,7 +63,6 @@
   display: flex;
   gap: 8px;
   padding: 5px 8px;
-
   margin-left: 5px;
   cursor: default;
   opacity: 0.85;
@@ -77,7 +88,8 @@
 }
 
 .tree-leaf:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 123, 255, 0.2);
+  color: white;
 }
 
 .leaf-icon {
