--- a/frontend/src/components/molecules/ContextMenu/FileContextMenu.css
+++ b/frontend/src/components/molecules/ContextMenu/FileContextMenu.css
@@ -10,7 +10,7 @@
   pointer-events: auto;
 }
 
-.context-menu > button {
+.context-menu button {
   width: 100%;
   height: 40px;
   border: none;
@@ -27,7 +27,7 @@
   border-bottom: 1px solid #333;
 }
 
-.context-menu > button:hover {
+.context-menu button:hover {
   background-color: #2c2c2c;
   color: #fff;
 }
