--- a/frontend/src/pages/Dashboard/Dashboard.css
+++ b/frontend/src/pages/Dashboard/Dashboard.css
@@ -2,8 +2,12 @@
   width: 60%;
   margin: 0 auto;
   margin-top: 15rem;
-  display: grid;
-  grid-template-columns: 250px 1fr;
-  gap: 16px;
   background-color: #151515;
+}
+
+@media (max-width: 768px) {
+  .dashboard-container {
+    width: 90%;
+    margin-top: 10rem;
+  }
 }
