--- a/frontend/src/components/molecules/AIPrototype/AIPrototype.css
+++ b/frontend/src/components/molecules/AIPrototype/AIPrototype.css
@@ -98,11 +98,57 @@
   border-radius: 10%;
 }
 
-.bubble-container {
-  width: 100%;
+.mic-listening {
+  padding: 0.5rem;
+  border-radius: 100%;
+  box-sizing: border-box;
+}
+
+.prototype-button {
+  padding: 0.2em 1em;
+  margin-left: auto;
+  background-color: #222830;
+  color: black;
+  border: none;
+  border-radius: 999px;
+  cursor: pointer;
+  font-weight: semi-bold;
+  position: relative;
+  font-size: 1.2rem;
+  z-index: 1;
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: center;
+  gap: 8px;
+}
+
+.prototype-button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 999px;
+  background-image: linear-gradient(
+    to top right,
+    #ffc400 0%,
+    #ffc400 20%,
+    #f8682f 40%,
+    #e62c6d 60%,
+    #ff9100 80%,
+    #b25aff 100%
+  );
+  z-index: -1; /* push gradient behind the text */
+}
+.prototype-button:hover::after {
+  opacity: 0.8;
+}
+.bubble-container {
+  width: 99%;
+  display: flex;
+  align-items: center;
   justify-content: end;
   gap: 8px;
 }
