--- a/frontend/src/components/molecules/AIPrototype/AIPrototype.css
+++ b/frontend/src/components/molecules/AIPrototype/AIPrototype.css
@@ -1,7 +1,7 @@
 .AIPrototype-container {
   width: 100%;
   height: 100%;
-  padding: 1rem 0.5rem;
+  padding: 0.8rem 0.5rem;
   display: flex;
   gap: 12px;
   border-radius: 15px;
@@ -98,15 +98,10 @@
   border-radius: 10%;
 }
 
-.mic-listening {
-  padding: 0.5rem;
-  border-radius: 100%;
-  box-sizing: border-box;
-}
-
 .prototype-button {
   padding: 0.2em 1em;
   margin-left: auto;
+  margin-bottom: 5px;
   background-color: #222830;
   color: black;
   border: none;
@@ -155,6 +150,7 @@
   display: inline-block;
   margin-right: auto;
   margin-left: 0px;
+  margin-top: auto;
 }
 
 .API-key-dropdown {
@@ -194,7 +190,7 @@
 .bubble-container {
   width: 99%;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   gap: 10px;
 }
@@ -221,4 +217,28 @@
   font-weight: semibold;
   text-align: left;
   font-style: italic;
+}
+
+.loadingMessage {
+  color: white;
+  font-size: 1.3rem;
+  height: fit-content;
+  text-align: center;
+  animation: fadeUp 1s ease forwards;
+  font-style: italic;
+  color: #888888d3;
+}
+
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 1;
+  }
 }
