--- a/frontend/src/pages/CreateProject/CreateProject.css
+++ b/frontend/src/pages/CreateProject/CreateProject.css
@@ -33,13 +33,15 @@ p {
 
 .template {
   width: 90%;
+  min-width: 300px;
+  min-height: 40px;
   height: max-content;
   padding: 0.7rem 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid #222830;
+  border: 2px solid #2e343d;
   max-width: 100%;
   background-color: #0e0d0d;
 }
