--- a/frontend/src/components/atoms/LoadingStage/LoadingStage.css
+++ b/frontend/src/components/atoms/LoadingStage/LoadingStage.css
@@ -1,15 +1,3 @@
-/* .template-info {
-  text-align: center;
-  color: white;
-  font-size: 1.3rem;
-  margin-top: 20px; 
-  display: flex;
-  flex-direction: column;
-  margin-right: auto;
-  padding-left: 10px;
-  align-items: start;
-  justify-items: ;
-} */
 .projectName {
   font-weight: 200;
   font-size: 1rem;
@@ -53,6 +41,7 @@
   position: relative;
   transform: rotate(45deg);
 }
+
 .loader::before {
   content: "";
   box-sizing: border-box;
@@ -63,6 +52,7 @@
   top: -24px;
   animation: animloader 4s ease infinite;
 }
+
 .loader::after {
   content: "";
   box-sizing: border-box;
@@ -71,46 +61,54 @@
   top: 0;
   width: 24px;
   height: 24px;
-  background: rgba(255, 255, 255, 0.85);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  background: linear-gradient(
+    135deg,
+    #ffc400,
+    #ff9100,
+    #f8682f,
+    #e62c6d,
+    #b25aff
+  );
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
   animation: animloader2 2s ease infinite;
 }
 
 @keyframes animloader {
   0% {
-    box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0),
-      24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
+    box-shadow: 0 24px transparent, 24px 24px transparent, 24px 48px transparent,
+      0px 48px transparent;
   }
   12% {
-    box-shadow: 0 24px white, 24px 24px rgba(255, 255, 255, 0),
-      24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
+    box-shadow: 0 24px #ffc400, 24px 24px transparent, 24px 48px transparent,
+      0px 48px transparent;
   }
   25% {
-    box-shadow: 0 24px white, 24px 24px white, 24px 48px rgba(255, 255, 255, 0),
-      0px 48px rgba(255, 255, 255, 0);
+    box-shadow: 0 24px #ff9100, 24px 24px #ffc400, 24px 48px transparent,
+      0px 48px transparent;
   }
   37% {
-    box-shadow: 0 24px white, 24px 24px white, 24px 48px white,
-      0px 48px rgba(255, 255, 255, 0);
+    box-shadow: 0 24px #f8682f, 24px 24px #ff9100, 24px 48px #ffc400,
+      0px 48px transparent;
   }
   50% {
-    box-shadow: 0 24px white, 24px 24px white, 24px 48px white, 0px 48px white;
+    box-shadow: 0 24px #e62c6d, 24px 24px #f8682f, 24px 48px #ff9100,
+      0px 48px #ffc400;
   }
   62% {
-    box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px white, 24px 48px white,
-      0px 48px white;
+    box-shadow: 0 24px transparent, 24px 24px #b25aff, 24px 48px #e62c6d,
+      0px 48px #f8682f;
   }
   75% {
-    box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0),
-      24px 48px white, 0px 48px white;
+    box-shadow: 0 24px transparent, 24px 24px transparent, 24px 48px #b25aff,
+      0px 48px #e62c6d;
   }
   87% {
-    box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0),
-      24px 48px rgba(255, 255, 255, 0), 0px 48px white;
+    box-shadow: 0 24px transparent, 24px 24px transparent, 24px 48px transparent,
+      0px 48px #b25aff;
   }
   100% {
-    box-shadow: 0 24px rgba(255, 255, 255, 0), 24px 24px rgba(255, 255, 255, 0),
-      24px 48px rgba(255, 255, 255, 0), 0px 48px rgba(255, 255, 255, 0);
+    box-shadow: 0 24px transparent, 24px 24px transparent, 24px 48px transparent,
+      0px 48px transparent;
   }
 }
 
