--- a/frontend/src/components/atoms/InstructionModal/InstructionsModal.css
+++ b/frontend/src/components/atoms/InstructionModal/InstructionsModal.css
@@ -35,9 +35,14 @@
   padding: 28px;
   max-width: 640px;
   width: 90%;
+  overflow-y: auto;
+  max-height: 90%;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
   position: relative;
   animation: fadeInUp 0.3s ease;
+}
+.modal-content::-webkit-scrollbar {
+  display: none;
 }
 
 @keyframes fadeInUp {
@@ -95,7 +100,7 @@
   font-weight: 500;
   color: #fff;
   padding: 10px 18px;
-  border-radius: 10px;
+  border-radius: 20px;
   border: none;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -111,7 +116,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 10px;
+  border-radius: 20px;
   background: linear-gradient(90deg, #ff9100, #f8682f, #e62c6d, #b25aff);
   background-size: 200% 200%;
   animation: gradientShift 4s ease infinite;
